tests/format/misc/errors/typescript/declare-getter.ts
class Foo {
  declare get foo()
}
